tests/error/tracing_errors/range.err
Traceback (most recent call last):
  File "$FILE", line 12, in <module>
    guppy.compile(test)
  File "$FILE", line 7, in test
    for i in range(n):
TypeError: 'GuppyObject' object cannot be interpreted as an integer
